# sax

./: .gitignore  README.md  get_activations.py  justfile  launch.py  launch_sweep.py  learnings.md  plot.py  pyproject.toml  technical-debt.md  train_sae.py
docs/: get_activations.html  launch.html
docs/sax/: explore.html  helpers.html  index.html  nn.html  sae.html  sweep.html  tracking.html  train.html  vision_models.html
experiments/: baseline.toml  sparsity-warmup.toml  with-pre-enc-bias.toml
notebooks/: explore.py
sax/: __init__.py  explore.py  helpers.py  nn.py  schema.sql  sweep.py  tracking.py  train.py  vision_models.py
tests/: test_expand.py  test_explore.py  test_reference.py
