[project]
name = "sae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.18.5",
    "chex>=0.1.86",
    "datasets>=3.0.0",
    "equinox>=0.11.7",
    "jax>=0.4.33",
    "jaxtyping>=0.2.34",
    "open-clip-torch>=2.26.1",
    "setuptools>=75.1.0",
    "submitit>=1.5.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tyro>=0.8.10",
    "webdataset>=0.2.100",
]

[tool.ruff.lint]
ignore = ["F722"]
