[project]
name = "sae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.4.1",
    "chex>=0.1.86",
    "datasets>=3.0.0",
    "equinox>=0.11.7",
    "jax[cuda12]>=0.4.33",
    "jaxtyping>=0.2.34",
    "marimo>=0.8.17",
    "matplotlib>=3.9.2",
    "open-clip-torch>=2.26.1",
    "optax>=0.2.3",
    "polars>=1.8.2",
    "setuptools>=75.1.0",
    "submitit>=1.5.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "tyro>=0.8.10",
    "wandb>=0.18.1",
    "webdataset>=0.2.100",
]

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv]
dev-dependencies = [
    "einops>=0.8.0",
    "pdoc3>=0.11.1",
    "pytest>=8.3.3",
    "transformer-lens==1.10.0",
    "transformers==4.35.2",
]
